@@ -1,3 +1,4 @@
+ fix: channel ids were not set within if statements in the nginx config
  name change: we're nchan now. code renamed, and cleaned up. config options are backwards-compatible.
  feature: websocket subscriber support
  huge refactor: completely new in-memory storage engine. No more global lock.
